fixed spacing and header on mobile

--- a/style.css
+++ b/style.css
@@ -73,15 +73,26 @@ body {
 }
 
 section {
-  padding: 4em 2em;
+  /* padding: 4em 2em; */
   max-width: 1000px;
   margin: auto;
 }
 
 .logo {
+  text-decoration: none;
   order: 1;
   font-size: 2.3rem;
   margin-bottom: 0.5rem;
+}
+
+.logo a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.logo a:hover {
+  color: inherit;
+  text-decoration: none;
 }
 
 .hero {
@@ -90,12 +101,10 @@ section {
   align-items: center;
   justify-content: space-between;
   text-align: left;
-  width: 100vw;
-  max-width: 100vw;
-  margin-left: calc(50% - 50vw);
-  margin-right: calc(50% - 50vw);
+  width: 100%;
+  max-width: 100%;
   min-height: 400px;
-  padding: 2em 0;
+  /* padding: 2em 0; */
   background: #fff;
 }
 
@@ -104,6 +113,12 @@ section {
   font-weight: 100;
   text-align: center;
   margin-left: 10px;
+}
+
+.hero img {
+  max-width: 100%;
+  width: auto;
+  height: auto;
 }
 
 .hero img {
@@ -297,6 +312,26 @@ footer {
     top: 5px;
     right: 15px;
     font-size: 2rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .hero {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-top: 4em;
+  }
+
+  .hero h2 {
+    font-size: 2.5rem;
+    margin-left: 0;
+  }
+
+  .hero img {
+    width: 100%;
+    max-width: 320px;
+    margin-top: 1.5rem;
   }
 }
 
